kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ruvamco-broker
  namespace: ruvamco
  labels:
    app.kubernetes.io/name: ruvamco-broker
spec:
  selector:
    app.kubernetes.io/name: ruvamco-broker
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: ruvamco-control-plane
  namespace: ruvamco
  labels:
    app.kubernetes.io/name: ruvamco-control-plane
spec:
  selector:
    app.kubernetes.io/name: ruvamco-control-plane
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 18000
      targetPort: grpc
      protocol: TCP
  type: ClusterIP
